# ChangeLog for sys-apps/hdparm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.131 2008/02/19 01:02:38 vapier Exp $

*hdparm-8.2 (19 Feb 2008)

  19 Feb 2008; Mike Frysinger <vapier@gentoo.org> +hdparm-8.2.ebuild:
  Version bump.

*hdparm-8.1 (16 Feb 2008)

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> +hdparm-8.1.ebuild:
  Version bump.

*hdparm-8.0 (16 Feb 2008)

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> +hdparm-8.0.ebuild:
  Version bump.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> hdparm-7.7.ebuild:
  Stable on mips.

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> hdparm-7.7.ebuild:
  Stable on ppc64; bug #194007

  29 Sep 2007; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Stable on mips, per #194007.

  28 Sep 2007; nixnut <nixnut@gentoo.org> hdparm-7.7.ebuild:
  Stable on ppc wrt bug 194007

  28 Sep 2007; Raúl Porcel <armin76@gentoo.org> hdparm-7.7.ebuild:
  alpha/ia64/sparc/x86 stable wrt #194007

  28 Sep 2007; Jeroen Roovers <jer@gentoo.org> hdparm-7.7.ebuild:
  Stable for HPPA (bug #194007).

  28 Sep 2007; Christoph Mende <angelos@gentoo.org> hdparm-7.7.ebuild:
  Stable on amd64 wrt bug #194007

*hdparm-7.7 (08 Aug 2007)

  08 Aug 2007; Mike Frysinger <vapier@gentoo.org> +hdparm-7.7.ebuild:
  Version bump.

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> hdparm-7.6.ebuild:
  Stable on ppc64; bug #186290

  25 Jul 2007; Jeroen Roovers <jer@gentoo.org> hdparm-7.6.ebuild:
  Stable for HPPA (bug #186290).

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> hdparm-7.6.ebuild:
  amd64 stable, bug 186290

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org> hdparm-7.6.ebuild:
  alpha/ia64 stable wrt #186290

  23 Jul 2007; nixnut <nixnut@gentoo.org> hdparm-7.6.ebuild:
  Stable on ppc wrt bug 186290

  23 Jul 2007; Joshua Kinard <kumba@gentoo.org> hdparm-7.6.ebuild:
  Stable on mips, per #186290.
