@@ -1,41 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/Attic/hdparm-8.1.ebuild,v 1.1 2008/02/16 22:19:24 vapier Exp $
-
-inherit toolchain-funcs
-
-DESCRIPTION="Utility to change hard drive performance parameters"
-HOMEPAGE="http://sourceforge.net/projects/hdparm/"
-SRC_URI="mirror://sourceforge/hdparm/${P}.tar.gz"
-
-LICENSE="as-is"
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
-IUSE=""
-
-DEPEND=""
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	sed -i \
-		-e "/^CFLAGS/ s:-O2:${CFLAGS}:" \
-		-e "/^LDFLAGS/ s:-s:${LDFLAGS}:" \
-		-e "/strip hdparm/d" \
-		Makefile || die "sed"
-}
-
-src_compile() {
-	emake CC="$(tc-getCC)" || die "compile error"
-}
-
-src_install() {
-	into /
-	dosbin hdparm contrib/idectl || die "dosbin"
-
-	newinitd "${FILESDIR}"/hdparm-init-8 hdparm
-	newconfd "${FILESDIR}"/hdparm-conf.d.3 hdparm
-
-	doman hdparm.8
-	dodoc hdparm.lsm Changelog README.acoustic hdparm-sysconfig
-}
