@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/hdparm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.131 2008/02/19 01:02:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hdparm/ChangeLog,v 1.132 2008/02/20 06:17:43 vapier Exp $
+
+*hdparm-8.4 (20 Feb 2008)
+
+  20 Feb 2008; Mike Frysinger <vapier@gentoo.org> -hdparm-8.0.ebuild,
+  -hdparm-8.1.ebuild, +hdparm-8.4.ebuild:
+  Version bump.
 
 *hdparm-8.2 (19 Feb 2008)
 
